--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -2,6 +2,6 @@ header {
     background-color: white;
     height: 70px;
     width: 100%;
-    border-bottom: 1px #CCCCCC;
-    background: #fff url('https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/logo.png') 20px center no-repeat;
+    border-bottom: 1px solid #CCCCCC;
+    background: #fff url('../images/logo.png') 20px center no-repeat;
 }
