--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -5,3 +5,8 @@ body {
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #484848;
 }
+.container {
+    max-width: 1000px;
+    margin: 30px auto;
+    margin-bottom: 30px;
+}
